[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/EnemiesInheritance/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/ProjectileEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="ProjectileEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, -8 )

[node name="Hurtbox" parent="." index="2"]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." index="3"]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="EnemyStats" parent="." index="4"]
max_health = 5

[node name="FirePosition" type="Position2D" parent="." index="5"]
position = Vector2( 0, -16 )

[node name="FireDirection" type="Position2D" parent="." index="6"]
position = Vector2( 0, -32 )

[node name="FireTimer" type="Timer" parent="." index="7"]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="FireTimer" to="." method="fire_bullet"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
